Bug 510993 - Multi-touch Gestures Not Working on Xiaomi Pad Mini (Triple, Four, and Five Finger Gestures)
Summary: Multi-touch Gestures Not Working on Xiaomi Pad Mini (Triple, Four, and Five F...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Shortcuts and Canvas Input Settings (other bugs)
Version First Reported In: unspecified
Platform: Android Unspecified
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: triaged
Depends on:
Blocks:
 
Reported: 2025-10-24 04:08 UTC by Afiq
Modified: 2026-01-16 14:30 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Krita Log Report Regarding Bugs on Xiaomi Pad Mini (87 bytes, text/plain)
2025-11-20 05:05 UTC, Afiq
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Afiq 2025-10-24 04:08:40 UTC
I’ve been a loyal Krita user for years, but I recently encountered a frustrating issue on my Xiaomi Pad Mini. The multi-touch gestures — specifically triple tap, four-finger tap, five-finger tap, and all drag finger gestures — do not work at all.

Only the double-tap gesture (undo) is functional. Other gestures that are essential for smooth workflow and productivity are completely unresponsive. This significantly affects the drawing experience, as gesture shortcuts are an important part of using Krita efficiently on touch devices.

Device: Xiaomi Pad Mini
OS Version: Android 15, HyperOS 2 (2.0.206.0.VAOMIXM)
Krita Version: 5.2.13

Steps to Reproduce:

1. Open Krita on Xiaomi Pad Mini.


2. Try using triple tap, four-finger tap, five-finger tap, or drag gestures.


3. Observe that none of them respond, except for the double-tap undo.



Expected Behavior:
All multi-touch gestures should function normally, allowing for smooth navigation and control within the app.

Actual Behavior:
Only the double-tap (undo) gesture works. All other touch gestures are unresponsive.

Impact:
This issue creates a frustrating user experience, especially for artists who rely heavily on gesture controls.

Request:
Please investigate and fix this issue as soon as possible. Your attention to this problem would be greatly appreciated by long-time users like me.
Comment 1 dra.w.p.il.e+bugskde 2025-11-04 02:09:40 UTC
I'm not able to make this happen on any of my devices. It might be possible to figure out more by adding logging in the touch handling to figure that out, similar to the tablet event log. That might take a while though, since there's currently still pending changes to that part of the code.

It may be possible to figure this out quicker through Drawpile, since that uses the same underlying technology as Krita and already has that logging. If you'd be willing to try that out:

* Grab the latest version of Drawpile, at the time of writing that is 2.3.0-beta.4 (NOT 2.2.2, that doesn't use quite the same touch handling as Krita): https://drawpile.net/download/#Beta
* Create a new canvas and briefly familiarize yourself with the touch gestures and check whether they work. You can see which gestures are available and what they're supposed to do under Edit → Preferences → Touch.
* In the top menu open Help → Touch Tester, touch around on the area on the left. Ideally, make a screen recording of this with touch feedback enabled, that way I can see what you're doing and what the program is seeing simultaneously. Stop the screen recording and close the touch tester, attach the recording to this bug or upload it somewhere else so that I can analyze it.
* Again in the top menu, use Tools → Developer Tools → Tablet Event Log and pick a file somewhere you can find it again. Make the following touch inputs on the canvas. Please only do each one once and in this order so that I can correlate them easier. A screen recording of this would also be helpful, but is not strictly necessary if you follow the order exactly:
    1. One finger tap.
    2. Two-finger tap.
    3. Three-finger tap.
    4. Four-finger tap.
    5. One-finger drag.
    6. Two-finger drag and twist.
    7. One finger tap and hold.
Then in the top menu use Tools → Developer Tools → Stop Tablet Event Log to finish the log. This is important, otherwise the log will be incomplete! Then close Drawpile and attach the log file and potential screen recording to this bug or upload it somewhere else.

If you don't want to do that, I'll also write here again once the logging has made its way into Krita.
Comment 2 Halla Rempt 2025-11-05 09:59:45 UTC
Setting to needinfo
Comment 3 Bug Janitor Service 2025-11-20 03:47:01 UTC
🐛🧹 ⚠️ This bug has been in NEEDSINFO status with no change for at least 15 days. Please provide the requested information, then set the bug status to REPORTED. If there is no change for at least 30 days, it will be automatically closed as RESOLVED WORKSFORME.

For more information about our bug triaging procedures, please read https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging.

Thank you for helping us make KDE software even better for everyone!
Comment 4 Afiq 2025-11-20 05:05:24 UTC
Created attachment 186973 [details]
Krita Log Report Regarding Bugs on Xiaomi Pad Mini

hereby i uploads all the log needed,please resolve it ASAP really appreciated it.
Comment 5 Afiq 2025-11-20 05:06:53 UTC
(In reply to Afiq from comment #0)
> I’ve been a loyal Krita user for years, but I recently encountered a
> frustrating issue on my Xiaomi Pad Mini. The multi-touch gestures —
> specifically triple tap, four-finger tap, five-finger tap, and all drag
> finger gestures — do not work at all.
> 
> Only the double-tap gesture (undo) is functional. Other gestures that are
> essential for smooth workflow and productivity are completely unresponsive.
> This significantly affects the drawing experience, as gesture shortcuts are
> an important part of using Krita efficiently on touch devices.
> 
> Device: Xiaomi Pad Mini
> OS Version: Android 15, HyperOS 2 (2.0.206.0.VAOMIXM)
> Krita Version: 5.2.13
> 
> Steps to Reproduce:
> 
> 1. Open Krita on Xiaomi Pad Mini.
> 
> 
> 2. Try using triple tap, four-finger tap, five-finger tap, or drag gestures.
> 
> 
> 3. Observe that none of them respond, except for the double-tap undo.
> 
> 
> 
> Expected Behavior:
> All multi-touch gestures should function normally, allowing for smooth
> navigation and control within the app.
> 
> Actual Behavior:
> Only the double-tap (undo) gesture works. All other touch gestures are
> unresponsive.
> 
> Impact:
> This issue creates a frustrating user experience, especially for artists who
> rely heavily on gesture controls.
> 
> Request:
> Please investigate and fix this issue as soon as possible. Your attention to
> this problem would be greatly appreciated by long-time users like me.

(In reply to dra.w.p.il.e+bugskde from comment #1)
> I'm not able to make this happen on any of my devices. It might be possible
> to figure out more by adding logging in the touch handling to figure that
> out, similar to the tablet event log. That might take a while though, since
> there's currently still pending changes to that part of the code.
> 
> It may be possible to figure this out quicker through Drawpile, since that
> uses the same underlying technology as Krita and already has that logging.
> If you'd be willing to try that out:
> 
> * Grab the latest version of Drawpile, at the time of writing that is
> 2.3.0-beta.4 (NOT 2.2.2, that doesn't use quite the same touch handling as
> Krita): https://drawpile.net/download/#Beta
> * Create a new canvas and briefly familiarize yourself with the touch
> gestures and check whether they work. You can see which gestures are
> available and what they're supposed to do under Edit → Preferences → Touch.
> * In the top menu open Help → Touch Tester, touch around on the area on the
> left. Ideally, make a screen recording of this with touch feedback enabled,
> that way I can see what you're doing and what the program is seeing
> simultaneously. Stop the screen recording and close the touch tester, attach
> the recording to this bug or upload it somewhere else so that I can analyze
> it.
> * Again in the top menu, use Tools → Developer Tools → Tablet Event Log and
> pick a file somewhere you can find it again. Make the following touch inputs
> on the canvas. Please only do each one once and in this order so that I can
> correlate them easier. A screen recording of this would also be helpful, but
> is not strictly necessary if you follow the order exactly:
>     1. One finger tap.
>     2. Two-finger tap.
>     3. Three-finger tap.
>     4. Four-finger tap.
>     5. One-finger drag.
>     6. Two-finger drag and twist.
>     7. One finger tap and hold.
> Then in the top menu use Tools → Developer Tools → Stop Tablet Event Log to
> finish the log. This is important, otherwise the log will be incomplete!
> Then close Drawpile and attach the log file and potential screen recording
> to this bug or upload it somewhere else.
> 
> If you don't want to do that, I'll also write here again once the logging
> has made its way into Krita.

https://drive.google.com/drive/folders/1K_KtXG9IdF4HmyunNOPzLemB4EO6NCSx?usp=drive_link
Comment 6 dra.w.p.il.e+bugskde 2025-11-20 12:37:59 UTC
You sent a link to your private Google Drive that no one else can access. You need to share a public link instead.
Comment 7 Afiq 2025-11-20 17:40:13 UTC
I already made it for public, deeply sorry for that🙂‍↕️
Comment 8 Afiq 2025-11-20 17:40:38 UTC
I already made it for public, deeply sorry for that🙂‍↕️
Comment 9 dra.w.p.il.e+bugskde 2025-11-20 17:50:22 UTC
Thanks, that works. There's definitely something strange going on, it seems like the program can only see "gestures" in some cases, but the touch inputs just disappear when more fingers are added. I'll take a deeper look at how those gestures come together and will write more here when I have something.
Comment 10 Bug Janitor Service 2025-12-25 15:25:09 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/2582
Comment 11 dra.w.p.il.e+bugskde 2025-12-25 16:50:29 UTC
I think I made the tap gestures work on a Xiaomi Pad 7. Could you check if this also makes it work on your device? A test build is here: https://invent.kde.org/graphics/krita/-/jobs/3766890/artifacts/file/_packaging/krita-arm64-v8a-5.3.0-prealpha-20e8ca0b-debug.apk

Drag gestures with more than two fingers can't be made to work on these devices I think. The system steals any touch input with more than two fingers right after it is made, so Krita has no chance of handling those. I've reported the issue to the manufacturer, maybe they will get back to us.
Comment 12 Dmitry Kazakov 2025-12-25 19:54:43 UTC
Git commit 865428ca89ab7d7335336d2bc1fb215effc9c65b by Dmitry Kazakov, on behalf of Carsten Hartenfels.
Committed on 25/12/2025 at 19:53.
Pushed by dkazakov into branch 'master'.

[android] Treat 3+-finger-touch cancels as ends

Because at minimum Xiaomi Pad devices always cancel touch events that
use more than two fingers, no matter how hard the user tries to turn the
system gestures in that regard off. We now treat those occurrences as if
the user ended the touch normally and trigger the appropriate shortcut.

"Normal" Android devices don't cancel these events for any reason as far
as I can tell, so it should have no detrimental effect there. If the
user really does want to use a system gesture assigned to three or more
fingers, they can disable the respective canvas shortcuts in Krita to
resolve the conflict.

M  +28   -3    libs/ui/input/kis_input_manager.cpp
M  +1    -0    libs/ui/input/kis_input_manager_p.h

https://invent.kde.org/graphics/krita/-/commit/865428ca89ab7d7335336d2bc1fb215effc9c65b
Comment 13 Afiq 2025-12-26 08:14:44 UTC
this build works on me (Xiaomi Pad Mini) so i guess all Xiaomi devices having same problems:
https://invent.kde.org/graphics/krita/-/jobs/3766890/artifacts/file/_packaging/krita-arm64-v8a-5.3.0-prealpha-20e8ca0b-debug.apk

although it is alpha...im waiting for final builds and releases! hopes all the gestures works fine.Thank You
Comment 14 Dmitry Kazakov 2026-01-16 14:30:56 UTC
Git commit 57da46224f6622699677941d5f56e9f4ff498b4c by Dmitry Kazakov, on behalf of Carsten Hartenfels.
Committed on 16/01/2026 at 14:30.
Pushed by dkazakov into branch 'krita/5.2'.

[android] Treat 3+-finger-touch cancels as ends

Because at minimum Xiaomi Pad devices always cancel touch events that
use more than two fingers, no matter how hard the user tries to turn the
system gestures in that regard off. We now treat those occurrences as if
the user ended the touch normally and trigger the appropriate shortcut.

"Normal" Android devices don't cancel these events for any reason as far
as I can tell, so it should have no detrimental effect there. If the
user really does want to use a system gesture assigned to three or more
fingers, they can disable the respective canvas shortcuts in Krita to
resolve the conflict.

M  +28   -3    libs/ui/input/kis_input_manager.cpp
M  +1    -0    libs/ui/input/kis_input_manager_p.h

https://invent.kde.org/graphics/krita/-/commit/57da46224f6622699677941d5f56e9f4ff498b4c