[android] Treat 3+-finger-touch cancels as ends

Because at minimum Xiaomi Pad devices always cancel touch events that
use more than two fingers, no matter how hard the user tries to turn the
system gestures in that regard off. We now treat those occurrences as if
the user ended the touch normally and trigger the appropriate shortcut.

"Normal" Android devices don't cancel these events for any reason as far
as I can tell, so it should have no detrimental effect there. If the
user really does want to use a system gesture assigned to three or more
fingers, they can disable the respective canvas shortcuts in Krita to
resolve the conflict.

BUG:510993