libs/ui/input/kis_input_manager_p.h
@@ -70,6 +70,7 @@ public:
 
     bool touchStrokeStarted = false;
     bool popupWasActive = false;
+    int lastPointCount = 0;
 
     QPointF startingPos;
     QPointF previousPos;
